@@ -6,9 +6,11 @@ each version.
 
 ======================
 (Version 1.3.0 beta; ??/02/19)
+- NEW: Speed limiting.
 - NEW: Added support for Python 3.7.
 - NEW: Dropped support for Python 2 and 3.1, 3.2, 3.3.
-- IMPROVE: Better tests.
+- IMPROVE: Better separation of code files.
+- IMPROVE: Better tests ang logging.
 - FIX: Bug fixes.
 
 (Version 1.2.5 beta; 04/01/17)
